:lipstick: Atualiza UI

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="futuremaster.min.css" type="text/css" media="all" />
   </head>
   <body>
-    <nav class="ui inverted futurecom blue main borderless menu">
-      <div class="item">
-        ✉️ Templates
-      </div>
+    <nav class="ui inverted futurecom blue main borderless big menu">
       <a href="#" class="header item">
         Instruções
       </a>
@@ -32,9 +29,12 @@
         Acesse <a href="templates/index.html">templates</a> e escolha um dos templates disponíveis clicando no link correspondente.
       </p>
       <h3 class="ui header">Como inserir imagens</h3>
+      <p>...</p>
       <h3 class="ui header">Usando um template</h3>
+      <p>...</p>
       <div class="ui section divider"></div>
       <h2 class="ui header">Regras para um bom arquivo de mail marketing</h2>
+      <p>...</p>
     </section>
   </body>
 </html>
